--- a/index.html
+++ b/index.html
@@ -1,56 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Budgie - Family Budgeting</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-  <script defer src="js/Config.js"></script>
-  <script defer>
-    document.addEventListener("DOMContentLoaded", () => {
-      const container = document.getElementById("form-links");
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Budgie</title>
+    <script src="js/Config.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const linkMap = {
+          FORM_EXPENSE_ID: "Quick Expense Entry",
+          FORM_LOAN_EXISTING_ID: "New Loan – Existing Borrower",
+          FORM_LOAN_NEW_ID: "New Loan – New Borrower",
+          FORM_REPAYMENT_ID: "Loan Repayment",
+          SCRIPT_WEBAPP_URL: "View Dashboard"
+        };
 
-      const createButton = (label, url) => {
-        const a = document.createElement("a");
-        a.href = url;
-        a.target = "_blank";
-        a.className = "block w-full sm:w-auto bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 m-2 rounded shadow text-center";
-        a.textContent = label;
-        return a;
-      };
+        const container = document.getElementById("linkContainer");
 
-      const formMap = [
-        { key: "FORM_EXPENSE_ID", label: "Quick Expense Entry" },
-        { key: "FORM_LOAN_EXISTING_ID", label: "New Loan - Existing Borrower" },
-        { key: "FORM_LOAN_NEW_ID", label: "New Loan - New Borrower" },
-        { key: "FORM_REPAYMENT_ID", label: "Loan Repayment" },
-      ];
-
-      formMap.forEach(({ key, label }) => {
-        const formId = BudgieConfig[key];
-        if (formId) {
-          const url = `https://docs.google.com/forms/d/e/${formId}/viewform`;
-          container.appendChild(createButton(label, url));
+        for (const key in linkMap) {
+          const url = CONFIG[key];
+          if (url && url.startsWith("http")) {
+            const link = document.createElement("a");
+            link.href = url;
+            link.target = "_blank";
+            link.textContent = linkMap[key];
+            link.className = "link-tile";
+            container.appendChild(link);
+          }
         }
       });
+    </script>
+    <style>
+      body {
+        font-family: 'Inter', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #222;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      header {
+        background-color: #243447;
+        color: white;
+        padding: 1rem 2rem;
+        text-align: center;
+      }
+      main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+        padding: 2rem 1rem;
+      }
+      footer {
+        text-align: center;
+        padding: 1rem;
+        font-size: 0.875rem;
+        color: #777;
+      }
+      .link-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 1.25rem;
+        width: 100%;
+        max-width: 900px;
+        margin-top: 2rem;
+      }
+      .link-tile {
+        display: block;
+        background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 12px;
+        padding: 1rem 1.5rem;
+        text-align: center;
+        text-decoration: none;
+        color: #243447;
+        font-weight: 600;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+        transition: all 0.2s ease-in-out;
+      }
+      .link-tile:hover {
+        background-color: #eef5ff;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome to Budgie</h1>
+      <p>A family budgeting companion</p>
+    </header>
 
-      const dashBtn = createButton("View Dashboard", BudgieConfig.SCRIPT_WEBAPP_URL);
-      container.appendChild(dashBtn);
-    });
-  </script>
-</head>
-<body class="bg-gray-100 text-gray-800">
-  <header class="bg-gray-800 text-white py-6">
-    <h1 class="text-3xl text-center font-bold">Welcome to Budgie</h1>
-    <p class="text-center text-sm">A family budgeting companion</p>
-  </header>
+    <main>
+      <div id="linkContainer" class="link-grid"></div>
+    </main>
 
-  <main class="max-w-4xl mx-auto px-4 py-8">
-    <div id="form-links" class="flex flex-wrap justify-center"></div>
-  </main>
-
-  <footer class="text-center text-xs text-gray-500 py-4">
-    Budgie © 2025 — A project by David & ChatGPT
-  </footer>
-</body>
+    <footer>
+      Budgie © 2025 — A project by David & ChatGPT
+    </footer>
+  </body>
 </html>
