Index.html updated to have buttons. Again-again.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     </main>
 
     <footer>
-      Budgie © 2025 — A project by David & ChatGPT
+      Budgie © 2025 — A project by David & ChatGPT<br />
+      Version 0.1.0
     </footer>
   </body>
 </html>
