--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.2
+      Version 0.1.3 (Config.js)
     </footer>
   </body>
 </html>
