Changed index.html and corrected /js/apps.js for dynamic ExpensesView v. 0.1.7

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.6 (Performance)
+      Version 0.1.7 (ExpensesView controls compatibility)
     </footer>
   </body>
 </html>
