--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.7 (ExpensesView controls compatibility)
+      Version 0.1.8 (ExpensesView DOM controls compatibility)
     </footer>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
