--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Budgie</n    ></title>
+    <title>Budgie</title>
     <script src="js/Config.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
     <style>
       body {
@@ -64,19 +64,6 @@
         transform: translateY(-2px);
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       }
-      .controls {
-        margin-top: 1.5rem;
-        display: flex;
-        gap: 1rem;
-      }
-      .controls label {
-        font-size: 0.875rem;
-        color: #333;
-      }
-      .totals {
-        margin-top: 1rem;
-        font-weight: 600;
-      }
     </style>
   </head>
   <body>
@@ -87,20 +74,11 @@
 
     <main>
       <div id="linkContainer" class="link-grid"></div>
-
-      <div class="controls">
-        <label>From <input type="date" id="startDate"></label>
-        <label>To   <input type="date" id="endDate"></label>
-        <button id="refresh">Refresh</button>
-      </div>
-    
-      <div id="tableContainer"></div>
-      <div id="totals" class="totals"></div>
     </main>
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.6 (Performance)
+      Version 0.1.9 (Dynamic viewExpenses page) – View CSV Page
     </footer>
   </body>
 </html>
