--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -1,11 +1,16 @@
+<!-- Filename: viewExpenses.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>View Expenses</title>
+
+  <!-- Font & CSS styling -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Config with CSV URL and script to render expenses -->
   <script src="js/Config.js" defer></script>
   <script src="js/viewExpenses.js" defer></script>
 </head>
@@ -16,19 +21,23 @@
   </header>
 
   <main>
+    <!-- Date filter controls -->
     <div class="controls">
       <label>From <input type="date" id="startDate" /></label>
       <label>To <input type="date" id="endDate" /></label>
       <button id="refreshBtn">Refresh</button>
     </div>
 
+    <!-- Populated by JS -->
     <div id="tableContainer"></div>
+
+    <!-- Populated with total PHP value -->
     <div id="totals" class="totals"></div>
   </main>
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.9 – View CSV Page
+    Version 0.1.9 – CSV Viewer
   </footer>
 </body>
 </html>
