--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.9 (Dynamic viewExpenses page) – View CSV Page
+      Version 0.1.10.2 (Dynamic viewExpenses page) – View CSV-driven HTML Page
     </footer>
   </body>
 </html>
