--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -29,7 +29,8 @@
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.10.2 – View CSV-driven HTML Page
+    Version 0.1.10.3 changed viewExpenses.js<br />
+    Fully self-contained with inline debugging
   </footer>
 </body>
 </html>
