--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.10.2 (Dynamic viewExpenses page) – View CSV-driven HTML Page
+      Version 0.1.10.3 changed viewExpenses.js<br />
+      Fully self-contained with inline debugging
     </footer>
   </body>
 </html>
