--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.10.3 changed viewExpenses.js<br />
+      Version 0.1.10.3b changed viewExpenses.js<br />
       Fully self-contained with inline debugging
     </footer>
   </body>
