--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.10.3b changed viewExpenses.js<br />
-      Fully self-contained with inline debugging
+      Version 0.1.10.4 changed viewExpenses.js<br />
+      Fetching and processing CSV, style sheet mess
+    
     </footer>
   </body>
 </html>
