--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -29,8 +29,9 @@
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.10.3 changed viewExpenses.js<br />
-    Fully self-contained with inline debugging
+    Version 0.1.10.4 changed viewExpenses.js<br />
+    Change fetching process for CSV data, style.css mess
+    
   </footer>
 </body>
 </html>
