--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -7,7 +7,37 @@
   <title>View Expenses</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <!--  <link rel="stylesheet" href="style.css" /> -->
-  <script src="js/Config.js" defer></script>
+
+``<style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      font-family: "Inter", sans-serif;
+    }
+    thead {
+      background-color: #f4f4f4;
+      font-weight: bold;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+      vertical-align: top;
+    }
+    tbody tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+    tbody tr:nth-child(odd) {
+      background-color: #ffffff;
+    }
+    td a {
+      color: #2c5ec5;
+      text-decoration: underline;
+      word-break: break-all;
+    }
+  </style>
+  
+  <script src="js/Config.js" defer></script
   <script src="js/viewExpenses.js" defer></script>
 </head>
 <body>
