--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -59,7 +59,7 @@
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.10.4 changed viewExpenses.js<br />
+    Version 0.1.11.1 formatting CSV data with css<br />
     Change fetching process for CSV data, style.css mess
     
   </footer>
