--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
     <footer>
       Budgie © 2025 — A project by David & ChatGPT<br />
-      Version 0.1.10.4 changed viewExpenses.js<br />
-      Fetching and processing CSV, style sheet mess
+      Version 0.1.11.3b changed viewExpenses.js<br />
+      Fetching and processing CSV, style sheet, refresh, default dates
     
     </footer>
   </body>
