--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -59,8 +59,7 @@
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.11.1 formatting CSV data with css<br />
-    Change fetching process for CSV data, style.css mess
+    Version 0.1.11.3b Refresh and default dates?
     
   </footer>
 </body>
