--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -1,4 +1,5 @@
 <!-- viewExpenses.html -->
+<!-- Version 0.1.11.3c — Refactored to support proper version display and improved refresh behavior -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,38 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>View Expenses</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
-  <!--  <link rel="stylesheet" href="style.css" /> -->
-
-``<style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      font-family: "Inter", sans-serif;
-    }
-    thead {
-      background-color: #f4f4f4;
-      font-weight: bold;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: left;
-      vertical-align: top;
-    }
-    tbody tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-    tbody tr:nth-child(odd) {
-      background-color: #ffffff;
-    }
-    td a {
-      color: #2c5ec5;
-      text-decoration: underline;
-      word-break: break-all;
-    }
-  </style>
-  
-  <script src="js/Config.js" defer></script
+  <link rel="stylesheet" href="style.css" />
   <script src="js/viewExpenses.js" defer></script>
 </head>
 <body>
@@ -53,14 +23,22 @@
       <button id="refreshBtn">Refresh</button>
     </div>
 
+    <!-- Banner for displaying currently selected date range -->
+    <div id="dateRangeBanner" class="banner"></div>
+
+    <!-- Table of filtered transactions -->
     <div id="tableContainer"></div>
+
+    <!-- Total display below the table -->
     <div id="totals" class="totals"></div>
+
+    <!-- Version string rendered by JS -->
+    <div id="jsVersion" class="version-note"></div>
   </main>
 
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.11.3b Refresh and default dates?
-    
+    Version 0.1.11.3c – View Expenses Page
   </footer>
 </body>
 </html>
