--- a/viewExpenses.html
+++ b/viewExpenses.html
@@ -1,44 +1,62 @@
 <!-- viewExpenses.html -->
-<!-- Version 0.1.11.3c — Refactored to support proper version display and improved refresh behavior -->
+<!-- Version 0.1.11.3c – now syncs with viewExpenses.js for version + fixes default date + refresh behavior -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>View Expenses</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
-  <link rel="stylesheet" href="style.css" />
+  <title>Recent Expenses</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 1rem;
+    }
+    h1 {
+      font-size: 1.5rem;
+    }
+    .controls {
+      margin: 1rem 0;
+    }
+    label {
+      margin-right: 1rem;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    th, td {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+    }
+    .even {
+      background-color: #f9f9f9;
+    }
+    .odd {
+      background-color: #fff;
+    }
+    footer {
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #555;
+    }
+  </style>
   <script src="js/viewExpenses.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1>Recent Expenses</h1>
-    <p>Select a date range below to filter your transactions.</p>
-  </header>
-
-  <main>
-    <div class="controls">
-      <label>From <input type="date" id="startDate" /></label>
-      <label>To <input type="date" id="endDate" /></label>
-      <button id="refreshBtn">Refresh</button>
-    </div>
-
-    <!-- Banner for displaying currently selected date range -->
-    <div id="dateRangeBanner" class="banner"></div>
-
-    <!-- Table of filtered transactions -->
-    <div id="tableContainer"></div>
-
-    <!-- Total display below the table -->
-    <div id="totals" class="totals"></div>
-
-    <!-- Version string rendered by JS -->
-    <div id="jsVersion" class="version-note"></div>
-  </main>
-
+  <h1>Recent Expenses</h1>
+  <p>Select a date range below to filter your transactions.</p>
+  <div class="controls">
+    <label>From <input type="date" id="startDate" /></label>
+    <label>To <input type="date" id="endDate" /></label>
+    <button id="refreshBtn">Refresh</button>
+  </div>
+  <div id="tableContainer"></div>
+  <div id="totals"></div>
   <footer>
     Budgie © 2025 — A project by David & ChatGPT<br />
-    Version 0.1.11.3c – View Expenses Page
+    Version 0.1.11.3c – View Expenses Page<br />
+    Linked JS version: <span id="jsVersion">(pending)</span>
   </footer>
 </body>
 </html>
